--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,4 @@ sentence=Export and run tensorflow models on arduino microcontrollers!
 paragraph=This library allows you to run trained TensorFlow models on low memory microcontrollers without pain! <br />Check out the github page for the documentation
 category=Data processing
 url=https://github.com/Bobingstern/MicroFlow
-architectures=avr,megaavr,sam,samd,nrf52,stm32f4,mbed,mbed_nano,mbed_portenta,mbed_rp2040
+architectures=*
