--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=MicroFlow
 version=1.1.0
 author=Bobingstern
-maintainer=Bobingstern
+maintainer=Bobingstern <anikpatel1322@gmail.com>
 sentence=Export and run tensorflow models on arduino microcontrollers!
 paragraph=This library allows you to run trained TensorFlow models on low memory microcontrollers without pain! <br />Check out the github page for the documentation
 category=Data processing
