--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.1.0
 author=Bobingstern
 maintainer=Bobingstern <anikpatel1322@gmail.com>
 sentence=Export and run tensorflow models on arduino microcontrollers!
-paragraph=This library allows you to run trained TensorFlow models on low memory microcontrollers without pain! <br />Check out the github page for the documentation
+paragraph=This library allows you to run trained TensorFlow models on low memory microcontrollers without pain! <br />Check out the github page for the documentation or if you want to contribute!
 category=Data processing
 url=https://github.com/Bobingstern/MicroFlow
 architectures=*
