--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=MicroFlow
-version=1.1.1
+version=1.1.2
 author=Bobingstern
 maintainer=Bobingstern <anikpatel1322@gmail.com>
 sentence=Export and run tensorflow models on arduino microcontrollers!
 paragraph=This library allows you to run trained TensorFlow models on low memory microcontrollers without pain! <br />Check out the github page for the documentation or if you want to contribute!
-category=Data processing
+category=Data Processing
 url=https://github.com/Bobingstern/MicroFlow
 architectures=*
